[gd_scene load_steps=5 format=2]

[ext_resource path="res://game over.tres" type="DynamicFont" id=1]
[ext_resource path="res://BackGrounds/bg_ninjabtuh.png" type="Texture" id=2]
[ext_resource path="res://scripts/game over.gd" type="Script" id=3]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=4]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -384.0
margin_top = -96.0
margin_right = 1116.0
margin_bottom = 741.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="retry" type="Button" parent="."]
margin_left = 96.0
margin_top = 288.0
margin_right = 480.0
margin_bottom = 352.0
custom_fonts/font = ExtResource( 4 )
text = "$$Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="."]
margin_left = 96.0
margin_top = 384.0
margin_right = 480.0
margin_bottom = 448.0
custom_fonts/font = ExtResource( 4 )
text = "$$Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 96.0
margin_right = 390.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 1 )
text = "$$You Moron
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 192.0
margin_top = 96.0
margin_right = 288.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 1 )
text = "$$score"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
